# linuxlearning

./: CMakeLists.txt  test.cpp
include/: add.h  func.h  main.h
src/: add.cpp  aux_files.cpp  client.cpp  file.cpp  pipe.cpp  process.cpp  pthread.cpp  server.cpp  shell.cpp  test.cpp  test.py
